[project]
name = "da2025-xgboost"
version = "0.1.0"
description = "da2025 xgboost basic setup"
authors = [
    {name = "xichen1317",email = "xi.chen1317@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xgboost (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
